WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110448
[BlackBerry] Misc build fixes
https://bugs.webkit.org/show_bug.cgi?id=110448
Summary
[BlackBerry] Misc build fixes
Alberto Garcia
Reported
2013-02-21 02:43:23 PST
WebString was replaced with BlackBerry::Platform::String in
r131316
. Some webdatabase APIs are encapuslated in DatabaseManager since
r137520
. Document::isPendingStyleRecalc() was renamed to hasPendingStyleRecalc() in
r129844
. Add closing brace that was missing in
r142482
.
Attachments
Patch
(4.20 KB, patch)
2013-02-21 02:45 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-02-21 02:45:37 PST
Created
attachment 189489
[details]
Patch
Rob Buis
Comment 2
2013-02-21 04:30:48 PST
Comment on
attachment 189489
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-02-28 01:33:55 PST
Comment on
attachment 189489
[details]
Patch Clearing flags on attachment: 189489 Committed
r144276
: <
http://trac.webkit.org/changeset/144276
>
WebKit Review Bot
Comment 4
2013-02-28 01:33:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug