[BlackBerry] Misc build fixes https://bugs.webkit.org/show_bug.cgi?id=110448

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-02-28
Reviewed by Rob Buis.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::executeJavaScript):
WebString was replaced with BlackBerry::Platform::String in r131316.
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):
Some webdatabase APIs are encapuslated in DatabaseManager since r137520.
(BlackBerry::WebKit::WebPagePrivate::postponeDocumentStyleRecalc):
Document::isPendingStyleRecalc() was renamed to hasPendingStyleRecalc() in r129844.
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::updateFormState):
Add closing brace that was missing in r142482.

Canonical link: https://commits.webkit.org/129362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144276 268f45cc-cd09-0410-ab3c-d52691b4dbfc